# VecGeom

./: .clang-format  .gitignore  2Dtemplateunroll.cpp  CMakeLists.txt  CTestConfig.cmake  ConeTraits.h  GeoManager.cpp  GeoManager.h  GeoManager_MakeBox.cpp  GeoManager_MakeCone.cpp  GeoManager_MakePolycone.cpp  GeoManager_MakeTube.cpp  GlobalDefs.h  History  LogicalVolume.h  Makefile  PhysicalBox.cpp  PhysicalBox.h  PhysicalCone.h  PhysicalPolycone.h  PhysicalTube.cpp  PhysicalTube.h  PhysicalVolume.cpp  PhysicalVolume.h  README.md  ShapeFactories.h  ShapeTester.cpp  ShapeTester.h  SimpleVecNavigator.cpp  SimpleVecNavigator.h  TestShapeContainer.h  TransformationMatrix.cpp  TransformationMatrix.h  TubeTraits.h  Utils.h  VecGeomConfig.cmake.in  VecgeomConfig.cmake.in  Vector3D.h  classifymatrices.py  compile_cilk.sh  (+12 more)
Backend/: CilkBackend.h  ScalarBackend.h  VcBackend.h
Base/: SOA3D.h  Types.h  Vector3D.h
Test/: CompileCilk.cpp  CompileTest.cpp  CompileVc.cpp
Tests/: BoxPlacementTest.cpp  CHEP13Benchmark.cpp  CHEP13BenchmarkSpecialMatrices.cpp  CHEP13Benchmark_unspecializedplacements.cpp  PlacementTest.cpp  ShapeTesterTester.cpp  TestPolyconeContains.cpp  TestTubeContains.cpp  TestVectorizedPlacedBox.cpp  TestVectorizedPlacedTube.cpp  TestVectorizedPlacedTube_full.cpp  TestVectorizedPlacedTube_fullphi.cpp  TestVectorizedPlacedTube_fullpi.cpp  TestVectorizedPlacedTube_hollow.cpp  TestVectorizedPlacedTube_hollowphi.cpp  TransformOfVectorsTest.cpp  compilescript.sh  compilescript2.sh  compilescript3.sh  compilescript3_clang.sh  compilescript4.sh  compilescriptCHEPBench.sh  compilescriptTube.sh
USolids/: CMakeLists.txt  FindROOT.cmake  History  Makefile
USolids/G4TS/testG4ExtrudedSolid2/: CMakeLists.txt  testG4ExtrudedSolid2.cc
USolids/bridges/G4/: CMakeLists.txt  Makefile
USolids/bridges/G4/OpticalEscape/: AXPETDemonstrator.cc
USolids/bridges/G4/OpticalEscape/include/: AXPETDetectorConstruction.hh  AXPETDetectorMessenger.hh  AXPETPrimaryGeneratorAction.hh
USolids/bridges/G4/OpticalEscape/src/: AXPETMaterial.cc  AXPETSteppingAction.cc
USolids/bridges/G4/SBT/: CMakeLists.txt  SBT.cc
USolids/bridges/G4/SBT/geant4/: orb.sbt  tessellatedSolid.sbt  test.sbt
USolids/bridges/G4/SBT/include/: G4Tools.hh  SBTperformance.hh  SBTperformanceMessenger.hh  SBTrun.hh
USolids/bridges/G4/SBT/matlab/: Directions.m  DistanceToIn.m  Inside.m  None.m  Normal.m  Root.m  SafetyFromInside.m  SafetyFromOutside.m  USolids.m  cone.m  customcolormap.m  dif.m  dirname.m  normalize.m  sbtdifferences.m  sbtdot.m  sbtgenpolycones.m  sbtgenpolyhedra.m  sbtperf.m  sbtperfall.m  sbtplot.m  sbtplot3d.m  sbtplotall.m  sbtplotallone.m  sbtplotpart.m  sbtscale.m  sbtvectors.m  subarray.m
USolids/bridges/G4/SBT/src/: SBTperformance.cc  SBTperformanceMessenger.cc  SBTvoxelMessenger.cc
USolids/bridges/G4/SBT/usolids/: cons.sbt  extru.sbt  genericTrap.sbt  multiunion.sbt  orb.sbt  performance.sbt  polycone-complicated.sbt  polycone-freds.sbt  polycone-scalabilitty.sbt  polycone.sbt  polycone180.sbt  polyhedra.sbt  polyhedra2-complicated.sbt  polyhedra2-scalability.sbt  polyhedra2-turns.sbt  polyhedra2.sbt  test.sbt  tet.sbt  trap.sbt  trd.sbt  ts.sbt  uorb.sbt  utrd.sbt  values.sbt
USolids/bridges/G4/include/: USTL.hh
USolids/bridges/G4/src/: G4USolid.cc
USolids/bridges/TGeo/: CMakeLists.txt  G__UBridges.cxx  G__UBridges.h  LinkDef.h  TGeoUShape.cxx  TestBox.C  TestMultiUnion.C  TestMultiUnion.cxx  main.cxx  run.sh
USolids/doc/: Kickoff-Meeting-Notes.html  USolids.docx
USolids/include/: UBits.hh  UBox.hh  UCons.hh  UCons.icc  UMultiUnion.hh  UOrb.hh  UParaboloid.hh  UPolycone.hh  UPolyhedra.hh  UTessellatedSolid.hh  UTransform3D.hh  UTrap.hh  UTubs.hh  UTubs.icc  UUtils.hh  UVector2.hh  UVector3.hh  VUSolid.hh
USolids/src/: UBox.cc  UCons.cc  UEnclosingCylinder.cc  UExtrudedSolid.cc  UGenericPolycone.cc  UGenericTrap.cc  UIntersectingCone.cc  UMultiUnion.cc  UOrb.cc  UPolyPhiFace.cc  UPolycone.cc  UPolyconeSide.cc  UPolyhedra.cc  UPolyhedraSide.cc  UQuadrangularFacet.cc  USphere.cc  UTessellatedSolid.cc  UTet.cc  UTransform3D.cc  UTrap.cc  UTrd.cc  UTubs.cc  UUtils.cc  UVCSGfaceted.cc  UVector3.cc  UVoxelizer.cc  VUSolid.cc
backend/: Backend.h  backend.h  cilk_backend.h  container.h  cuda_backend.cuh  implementation.h  scalar_backend.h  vc_backend.h
base/: AOS3D.h  AlignedBase.h  Array.h  ConstIterator.h  Container.h  Container3D.h  CyclicIterator.h  Global.h  Iterator.h  PlaneShell.h  RNG.h  SOA.h  SOA3D.h  SpecializedTransformation3D.h  Stopwatch.h  TrackContainer.h  Transformation3D.h  TypeMap.h  Vector.h  Vector2D.h  Vector3D.h  aos3d.h  array.h  container.h  global.h  iterator.h  list.h  parameters.h  rng.h  soa3d.h  specialized_matrix.h  specialized_transformation3d.h  stopwatch.h  track_container.h  trans_matrix.h  transformation3d.h  transformation_matrix.h  type_map.h  types.h  utilities.h  (+2 more)
benchmarking/: BenchmarkResult.h  Benchmarker.h  NavigationBenchmarker.h  ToInBenchmarker.h  VolumePointers.h  benchmark.h  distance_to_in.h  volume_converter.h
comparison/: shape_tester.h  volume_converter.h
cuda_prototype/: Box.cpp  Box.h  CompareOutput.cpp  ImplementationsCilk.cpp  ImplementationsCuda.cu  ImplementationsScalar.cpp  ImplementationsVc.cpp  Kernel.h  KernelBox.h  KernelLibrary.h  KernelTube.h  Launcher  Launcher.cpp  Launcher.cu  LauncherCUDA  LauncherCuda.cu  LauncherCuda.cuh  LauncherVc.cpp  LauncherVc.h  Library.h  LibraryCilk.h  LibraryCuda.cuh  LibraryGeneric.h  LibraryVc.h  MainCilk.cpp  MainCuda.cu  MainScalar.cpp  MainVc.cpp  Makefile  Shape.cpp  Shape.h  Tube.h  WrappersCuda.cu  WrappersScalar.cpp  WrappersVc.cpp  test  test.cu
doc/: BACKENDS.md  Rapport_stage_CERN.docx
figures/: location_gpugpu.eps
git-hooks/: email-notification-configuration.yml  post-receive
hooks/: commit-msg  pre-commit-clang-format  (+1 more)
prototype_cpugpu/: CMakeLists.txt  cuda.cu  interface.cpp  interface.h  main.cpp  testclass.cpp  testclass.h  vc.cpp
vector_comparison/: CMakeLists.txt  Cilk.cpp  Cilk.h  Main.cpp  Makefile  Scalar.cpp  Vc.cpp  VectorTester.cpp  VectorTester.h
(+748 files in other folders)
